syntax = "proto3";

package prot;
option go_package="./proto";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
}